// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffStatus snapshot 1`] = `
<DocumentFragment>
  <div
    class="diff-status-content"
  >
    <div
      class="diff-status-item"
    >
      <div
        class="diff-status-field"
      >
        <div
          class="diff-field-value field-value-remove"
        >
          disabled
        </div>
      </div>
    </div>
    <div
      class="diff-status-item"
    >
      <div
        class="diff-status-field"
      >
        <div
          class="diff-field-value field-value-add"
        >
          enabled
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DiffStatus snapshot 2`] = `
<DocumentFragment>
  <div
    class="diff-status-content"
  >
    <div
      class="diff-status-item"
    >
      <div
        class="diff-status-field"
      />
    </div>
    <div
      class="diff-status-item"
    >
      <div
        class="diff-status-field"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DiffStatus snapshot 3`] = `
<DocumentFragment>
  <div
    class="diff-status-content"
  >
    <div
      class="diff-status-item"
    >
      <div
        class="diff-status-field"
      >
        <div
          class="diff-field-value field-value-remove"
        >
          enabled
        </div>
      </div>
    </div>
    <div
      class="diff-status-item"
    >
      <div
        class="diff-status-field"
      >
        <div
          class="diff-field-value field-value-add"
        >
          disabled
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
